# wattwise-core

./: .dockerignore  .env.example  .gitignore  .grype.yaml  .pre-commit-config.yaml  .trivyignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  alembic.ini  flake.nix  justfile  mutation-floors.toml  pyproject.toml
.forgejo/workflows/: ci.yml  nightly.yml
.github/workflows/: ci.yml  nightly.yml
.review/: agent_findings.md  analytics_findings.md  api_findings.md  ingestion_findings.md
deploy/: compose.yaml
docker/: alembic.ini  entrypoint.sh
docs/: CONFIGURATION.md  METRICS.md  STYLE_GUIDE.md  issue-draft-grounding-misanchored-rewrite.md
docs/decisions/: 0001-arch-lint-hexagonal.md  0002-source-candidate-payload.md  0003-codex-gate-mmp-and-candidate-versioning.md  0004-built-stack-closeout-and-grounding-hardening.md  0005-binding-faithful-grounding.md  0006-pr-mutation-testing-diff-scoped-tmut.md  0007-probative-e2e-smoke-time-relative-fit-forge.md  0008-constraint-aware-grounding.md  0008-prescriptions-are-not-descriptions.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_agent_state.py  0003_agent_memory.py  0004_activity_file_format_pwx.py  0005_athlete_source_preference.py  0006_agent_interrupt.py  0007_athlete_response_length.py  0008_ingestion_watermark_and_gap.py  0009_activity_local_date.py  0010_drop_athlete_response_length.py  0011_activity_file_format_spec_set.py  0011_reresolution_lifecycle.py  0012_activity_file_format_spec_set.py  0012_agent_digest_record.py  0012_auth_refresh_token.py  0013_agent_digest_record.py  0013_auth_and_ops_job_state.py  0014_auth_and_ops_job_state.py  0015_activity_perceived_exertion.py  0016_agent_constraint_lifecycle.py
scripts/: _lib.sh  changelog.sh  ci_local.sh  ci_tools.sh  deploy.sh  gitleaks.toml  install_boot_check.sh  lint_commits.sh  mutation_gate.py  release.sh  rollback.sh  sbom.sh  scan.sh  secret_scan.sh  test_forge_portable.py  traceability.py
src/wattwise_core/: __init__.py  entitlement.py  identity.py  seams.py  storage.py
src/wattwise_core/agent/: __init__.py  auth_state.py  briefing_deliverable.py  capabilities.py  capabilities_evidence.py  capabilities_metrics.py  checkpoint.py  checkpoint_interrupts.py  compose_contracts.py  contracts.py  deliverables.py  diagnose_deliverable.py  digest_history.py  engine.py  engine_constraints.py  engine_entitlement.py  engine_extras.py  engine_factory.py  engine_graph.py  engine_memory.py  (+49 more)
tests/: __init__.py  conftest.py
tests/contract/: test_adapter_conformance.py  test_adapter_goldens.py  test_file_upload_contract.py  test_intervals_icu_contract.py  test_intervals_icu_error_paths.py  test_openapi_artifact.py  test_outbound_resilience.py
tests/e2e/: test_journeys.py
tests/golden/: test_copy_snapshots.py  test_cross_source_single_count.py  test_decoupling_golden.py  test_durability_golden.py  test_endurance_score_golden.py  test_graceful_degradation_substitution.py  test_hrv_golden.py  test_mmp_cp_golden.py  test_np_if_tss_golden.py  test_pmc_golden.py  test_readiness_golden.py  test_sport_gating_golden.py  test_srpe_load_golden.py  test_trimp_golden.py  test_wbal_golden.py
tests/inject/: test_injection.py
tests/integration/: _fake_capability.py  _schema.py  _session_provider.py  test_agent_diagnose.py  test_agent_engine.py  test_agent_goals.py  test_agent_live.py  test_agent_memory_engine.py  test_agent_retention.py  test_agent_state_pool.py  test_analytics_local_date_bucketing.py  test_analytics_service.py  test_api_agent.py  test_api_agent_breadth.py  test_api_athlete.py  test_api_athlete_reads.py  test_api_auth_flows.py  test_api_connect.py  test_api_core.py  test_api_doc60_surfaces.py  test_api_goals.py  test_api_performance.py  test_api_planning.py  test_api_user_settings.py  test_api_users.py  test_app_create_app_real_wiring.py  test_app_routes_present.py  test_atomic_upsert_write_path.py  test_backfill.py  test_candidate_validation_gate.py  test_cluster_a_security.py  test_cross_source_conflict.py  test_db_role_isolation.py  test_doc70_nonfunctional.py  test_durable_resume.py  test_engine_durable.py  test_entitlement_bounds.py  test_erasure_executor.py  test_gdpr_erasure.py  test_idempotency_dedup.py  (+18 more)
tests/portability/: test_type_roundtrip.py
tests/property/: test_cross_source_dedup_property.py  test_decoupling_property.py  test_durability_property.py  test_endurance_score_property.py  test_fit_forge_property.py  test_goals_listing_property.py  test_hrv_property.py  test_ingestion_engine_property.py  test_mmp_cp_property.py  test_np_if_tss_property.py  test_pmc_property.py  test_readiness_property.py  test_sport_gating_property.py  test_srpe_property.py  test_trimp_property.py  test_unit_tz_invariance_property.py  test_wbal_property.py
tests/unit/: test_agent_grounded_substance.py  test_agent_model.py  test_agent_redaction.py  test_analytics_constants_readers.py  test_analytics_failclosed_branches.py  test_api_core.py  test_api_performance.py  test_audit_shipped_line.py  test_auth_state.py  test_capabilities.py  test_capability_contract.py  test_capability_parity.py  test_checkpoint.py  test_composed_answer.py  test_connection_sync_suspect.py  test_container_entrypoint.py  test_credentials.py  test_crypto.py  test_db_role_dsn.py  test_decoder_error_branches.py  test_dedup_resolver.py  test_deliverables.py  test_doc70_units.py  test_endurance_score_gather.py  test_equivalence_classes.py  test_eval.py  test_eval_live_infra.py  test_eval_load_review.py  test_eval_plan.py  test_eval_vacuous_graders.py  test_file_upload_fuzz.py  test_fit_forge.py  test_gap_taxonomy.py  test_graph.py  test_grounding.py  test_grounding_binding.py  test_grounding_conformal.py  test_grounding_constraints.py  test_grounding_entailment.py  test_idempotency_key.py  (+41 more)
tools/: client_gen.py  e2e_smoke.py  fit_forge.py  mutation_gate.py  openapi_artifact.py
tools/lint/: __init__.py  __main__.py  content_copy.py  content_leak.py  core.py  english_only.py  import_direction.py  no_vendor_sql.py  runner.py  size_limits.py  test_docstrings.py
(+231 files in other folders)
